VIC Runner added

--- a/backend/params/rat_mekong.conf
+++ b/backend/params/rat_mekong.conf
@@ -1,14 +1,24 @@
 [GLOBAL]
 project_dir = /houston2/pritam/rat_mekong_v3
+conda_hook = /houston2/pritam/activate_conda.sh
+
 begin = 2001-01-01
 end = 2021-07-20
 previous_end = 2021-06-10
+
+[VIC]
+vic_env = /houston2/pritam/rat_mekong_v3/backend/models/vic_env
+vic_multiprocessing = 32
+
+vic_result_files = /houston2/pritam/rat_mekong_v3/backend/data/vic_results_conf/nc_fluxes.2001-04-01.nc  # Later read from vic_param_file, or make this version override the VIC Param file
+
+vic_param_file = /houston2/pritam/rat_mekong_v3/backend/params/vic/vic_params.txt
 
 [ROUTING]
 # Directories
 route_param_dir = /houston2/pritam/rat_mekong_v3/backend/params/routing
 route_result_dir = /houston2/pritam/rat_mekong_v3/backend/data/rout_results_conf
-route_input_dir = /houston2/pritam/rat_mekong_v3/backend/data/rout_input   # can be set equal to vic output directory later TODO
+route_input_dir = /houston2/pritam/rat_mekong_v3/backend/data/rout_input_conf   # can be set equal to vic output directory later TODO
 route_inflow_dir = /houston2/pritam/rat_mekong_v3/backend/data/inflow_conf
 
 # Parameter files
