converted from conf to yml config

--- a/backend/params/rat_mekong.conf
+++ b/backend/params/rat_mekong.conf
@@ -2,17 +2,34 @@
 project_dir = /houston2/pritam/rat_mekong_v3
 conda_hook = /houston2/pritam/activate_conda.sh
 
-begin = 2001-01-01
-end = 2021-07-20
+begin = 2001-01-01                      # MetSim requires 90 days of spin up data, so data starting from `begin` to `begin`+90 will be used as spin up data
+end = 2021-07-20                        # 
 previous_end = 2021-06-10
 
 [VIC]
+# VIC Runner specific parameters
 vic_env = /houston2/pritam/rat_mekong_v3/backend/models/vic_env
-vic_multiprocessing = 32
-
+vic_multiprocessing = 32                                                                            # How many cores to use
 vic_result_files = /houston2/pritam/rat_mekong_v3/backend/data/vic_results_conf/nc_fluxes.2001-04-01.nc  # Later read from vic_param_file, or make this version override the VIC Param file
+vic_param_file = /houston2/pritam/rat_mekong_v3/backend/params/vic/vic_params.txt                   # Default parameter file
 
-vic_param_file = /houston2/pritam/rat_mekong_v3/backend/params/vic/vic_params.txt
+##---- VIC Parameters (Optional; must match the option names of [global parameter file of VIC](https://vic.readthedocs.io/en/master/Documentation/Drivers/Image/GlobalParam/)).
+##---- If not provided, then the parameter file defined by `vic_param_file` will be used as the 
+##---- parameter file
+[VIC PARAMETERS]
+## VIC Simulation start date. Since metsim requires 90 days of data to spin up, the vic inputs start 
+##   at `begin`+91 days. So, just add 3 months to start date of the RAT-Mekong model
+## If not specified, VIC Start date will be calculated as `begin + timedelta(days=90)`
+## and VIC End date will be calcualted from this config file
+STARTYEAR = 2001      # Alternatively, the start date and end date can
+STARTMONTH = 04       #   overridden by specifying these 6 parameters
+STARTDAY = 02         
+ENDYEAR = 2001
+ENDMONTH = 04
+ENDDAY = 01
+# Any other option goes here
+DOMAIN_TYPE = 
+
 
 [ROUTING]
 # Directories
