working routing, vic

--- a/backend/params/rat_mekong.yml
+++ b/backend/params/rat_mekong.yml
@@ -54,15 +54,26 @@ VIC PARAMETERS:
 
 ROUTING:
   # Directories
-  route_param_dir: /houston2/pritam/rat_mekong_v3/backend/params/routing
-  route_result_dir: /houston2/pritam/rat_mekong_v3/backend/data/rout_results_conf
+  # route_param_dir: /houston2/pritam/rat_mekong_v3/backend/params/routing
   route_input_dir: /houston2/pritam/rat_mekong_v3/backend/data/rout_input_conf   # can be set equal to vic output directory later TODO
+  # route_result_dir: /houston2/pritam/rat_mekong_v3/backend/data/rout_results_conf
   route_inflow_dir: /houston2/pritam/rat_mekong_v3/backend/data/inflow_conf
+  route_workspace: /houston2/pritam/rat_mekong_v3/backend/data/route_workspace
 
   # Parameter files
-  route_param_file: /houston2/pritam/rat_mekong_v3/backend/params/routing/route_param.txt
-  flow_direction_file: /houston2/pritam/rat_mekong_v3/backend/params/routing/DRT_FDR_VIC.asc
-  uh_file: /houston2/pritam/rat_mekong_v3/backend/params/routing/uh.txt
-  station_file: /houston2/pritam/rat_mekong_v3/backend/data/ancillary/stations_latlon.csv  # In lat lon format
-
+  route_param_file: /houston2/pritam/rat_mekong_v3/backend/params/routing/route_param.txt  # Will be used to initialize. If not passed, every option must be specified in `ROUTING PARAMETERS` section
+  station_latlon_path: /houston2/pritam/rat_mekong_v3/backend/data/ancillary/stations_latlon.csv  # In lat lon format
   route_model: /houston2/pritam/rat_mekong_v3/backend/models/route_model/rout
+
+ROUTING PARAMETERS:  # (Optional; if passed, will override the `route_param_file` options)
+  flow_direction_file: /houston2/pritam/rat_mekong_v3/backend/params/routing/DRT_FDR_VIC.asc
+  velocity: 1.5
+  diff: 800
+  xmask: 5000
+  fraction: 1
+  # station_file: null        # Will be generated automatically from `station_file`
+  # input_files_prefix: null  # Will be generated automatically based on vic output
+  input_file_precision: 2     # Default. Hardcoded. Works fine for 0.0625° grid.
+  # start_date: null
+  # end_date: null
+  uh: /houston2/pritam/rat_mekong_v3/backend/params/routing/uh.txt
