--- a/backend/params/rat_mekong.yml
+++ b/backend/params/rat_mekong.yml
@@ -1,16 +1,24 @@
 GLOBAL:
   project_dir: /houston2/pritam/rat_mekong_v3
   conda_hook: /houston2/pritam/activate_conda.sh
-  begin: 2001-01-01                      # MetSim requires 90 days of spin up data, so data starting from `begin` to `begin`+90 will be used as spin up data
-  end: 2001-04-10                        # 
-  previous_end: 2021-06-10
+  # MetSim requires 90 days of spin up data, so data starting from `begin` to `begin`+90 will be used as spin up data
+  begin: 2001-01-01
+  end: 2021-07-23
+  previous_end: 2021-07-21
+  multiprocessing: 32                    # How many cores to use
+
+METSIM:
+  metsim_env: /houston2/pritam/conda/envs/metsim
+  metsim_param_file: /houston2/pritam/rat_mekong_v3/backend/params/metsim/params.yaml
+  metsim_workspace: /houston2/pritam/rat_mekong_v3/backend/data/metsim_workspace            # Logs and Parameter file will be saved here for each run
+  metsim_results: /houston2/pritam/rat_mekong_v3/backend/data/metsim_results_conf/6H_VIC_20010401-20210722.nc  # optional
 
 VIC:
   # VIC Runner specific parameters
   vic_env: /houston2/pritam/rat_mekong_v3/backend/models/vic_env
-  vic_multiprocessing: 32                                                             # How many cores to use
   vic_param_file: /houston2/pritam/rat_mekong_v3/backend/params/vic/vic_params.txt    # Default parameter file. OPTIONAL. If passed, this file will be used to initialize, but will be overriden by any options specified in this config file. If not passed, all necessary options must be specified here.
   vic_workspace: /houston2/pritam/rat_mekong_v3/backend/data/vic_workspace            # Logs and Parameter file will be saved here for each run
+  vic_forcings_dir: /houston2/pritam/rat_mekong_v3/backend/data/forcings_conf
 
 ##---- VIC Parameters (Optional; must match the option names of [global parameter file of VIC](https://vic.readthedocs.io/en/master/Documentation/Drivers/Image/GlobalParam/)).
 ##---- If not provided, then the parameter file defined by `vic_param_file` will be used as the 
@@ -50,7 +58,7 @@ VIC PARAMETERS:
   #   - OUT_EVAP
   #   - OUT_RUNOFF
   #   - OUT_BASEFLOW
-  RESULT_DIR: /houston2/pritam/rat_mekong_v3/backend/data/vic_results_temp/
+  RESULT_DIR: /houston2/pritam/rat_mekong_v3/backend/data/vic_results_conf/
 
 ROUTING:
   # Directories
