--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.paramiko/
 .condaenv/
 backend/models/
 backend/data/
@@ -193,3 +194,4 @@ cython_debug/
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks,visualstudiocode,data
+backend/scripts/_send_files.py
