gitignoring git backup and metsim notebook

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@ backend/data/
 *dask-worker-space/
 *route_model/
 extras/
+.backup.git/
+notebooks/metsim_sample
+**/secrets.ini
+.git*/
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks,visualstudiocode,data
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,jupyternotebooks,visualstudiocode,data
