--- a/.gitignore
+++ b/.gitignore
@@ -203,3 +203,4 @@ cython_debug/
 # End of https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks,visualstudiocode,data
 backend/scripts/_send_files.py
 .DS_Store
+backend/scripts/data_processing/_download_data.py
