updated gitignore after directory rename

--- a/.gitignore
+++ b/.gitignore
@@ -209,8 +209,8 @@ backend/scripts/data_processing/_download_data.py
 #SM
 data/*
 trial_notebooks/*
-main/params/*
-main/models/*
-main/scripts/dask-worker-space/*
-!main/params/rat_mekong.yml
-main/scripts/ee_utils/ee_config.py
+params/*
+models/*
+*dask-worker-space/*
+!src/params/rat_mekong.yml
+src/RAT/ee_utils/ee_config.py
