ignoring param and secret files

--- a/.gitignore
+++ b/.gitignore
@@ -204,3 +204,9 @@ cython_debug/
 backend/scripts/_send_files.py
 .DS_Store
 backend/scripts/data_processing/_download_data.py
+
+backend/params/routing/DRT_FDR_ARCfmt.tif
+
+backend/params/secrets/
+
+backend/params/vic/params_all_mekong.nc
