--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ authors = [
 description = "Resevoir Monitoring using Satellite Remote Sensing"
 requires-python = ">=3.6"
 readme = "README.md"
+license = {file = "LICENSE"}
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
