--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -32,7 +32,7 @@ jobs:
         run: |
           conda info
           conda install mamba -y
-          mamba env update --file environment.yml -n rat -y
+          mamba env update --file environment.yml -n rat
           mamba install conda-build pytest -y
           conda build .
           conda install --use-local rat
