strategy - without building

--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -34,8 +34,7 @@ jobs:
           conda install mamba -y
           mamba env update --file environment.yml -n rat
           mamba install conda-build pytest -y
-          conda build .
-          conda install --use-local rat
+          conda develop src/
       - name: Test with pytest
         run: |
           pytest
