activating rat before pytest

--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -37,4 +37,5 @@ jobs:
           conda develop src/
       - name: Test with pytest
         run: |
+          conda activate rat
           pytest
