--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -26,7 +26,7 @@ jobs:
         run: |
           conda info
           conda install mamba -y
-          mamba install pytest -y
+          mamba install pytest conda-build -y
           conda develop src/
           conda activate rat
           pytest
