--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -9,7 +9,8 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.7", "3.8"]
-
+    defaults:
+      shel: bash -l {0}
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
@@ -24,7 +25,6 @@ jobs:
           environment-file: environment.yml
           python-version: ${{ matrix.python-version }}
       - name: Build RAT and test
-        shell: bash -l {0}
         run: |
           conda info
           conda install mamba -y
