--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -16,8 +16,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Setup environment with mamba
+        shell: bash -l {0}
         uses: conda-incubator/setup-miniconda@v2
         with:
+          mamba-version: "*"
           auto-update-conda: true
           channels: conda-forge,defaults
           environment-file: environment.yml
