specify versions environment.yml

--- a/environment.yml
+++ b/environment.yml
@@ -3,24 +3,89 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - rasterio
-  - xarray
-  - numpy
-  - netcdf4
-  # - dask
-  - scipy
-  - yaml
-  - pandas
-  # - scikit-learn
-  - conda-build
-  - ca-certificates
-  - certifi
-  - openssl
-  - ncl
-  - gdal
-  - fiona
-  # - rtree
-  - python=3.9
-  - geopandas
-  # - earthengine-api
-  # - google-cloud-sdk
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - beautifulsoup4=4.11.1
+  - brotlipy=0.7.0
+  - bzip2=1.0.8
+  - c-ares=1.18.1
+  - ca-certificates=2022.9.24
+  - certifi=2022.9.24
+  - cffi=1.15.0
+  - chardet=4.0.0
+  - charset-normalizer=2.0.4
+  - colorama=0.4.4
+  - conda=4.12.0
+  - conda-build=3.22.0
+  - conda-content-trust=0.1.1
+  - conda-package-handling=1.8.1
+  - cryptography=36.0.0
+  - curl=7.84.0
+  - expat=2.4.9
+  - filelock=3.6.0
+  - gettext=0.21.0
+  - git=2.34.1
+  - glob2=0.7
+  - icu=58.2
+  - idna=3.3
+  - jinja2=2.11.3
+  - keyutils=1.6.1
+  - krb5=1.19.3
+  - ld_impl_linux-64=2.35.1
+  - libarchive=3.5.2
+  - libcurl=7.84.0
+  - libedit=3.1.20191231
+  - libev=4.33
+  - libffi=3.3
+  - libgcc-ng=11.2.0
+  - libgomp=11.2.0
+  - libiconv=1.17
+  - liblief=0.11.5
+  - libnghttp2=1.46.0
+  - libsolv=0.7.20
+  - libssh2=1.10.0
+  - libstdcxx-ng=12.1.0
+  - libxml2=2.9.14
+  - lz4-c=1.9.3
+  - lzo=2.10
+  - mamba=0.15.3
+  - markupsafe=2.0.1
+  - ncurses=6.3
+  - openssl=1.1.1q
+  - patch=2.7.6
+  - patchelf=0.13
+  - pcre2=10.37
+  - perl=5.26.2
+  - pip=21.2.4
+  - pkginfo=1.8.2
+  - psutil=5.9.0
+  - py-lief=0.11.5
+  - pycosat=0.6.3
+  - pycparser=2.21
+  - pyopenssl=22.0.0
+  - pysocks=1.7.1
+  - python=3.9.12
+  - python-libarchive-c=2.9
+  - python_abi=3.9
+  - pytz=2022.1
+  - pyyaml=6.0
+  - readline=8.1.2
+  - reproc=14.2.3
+  - reproc-cpp=14.2.3
+  - requests=2.27.1
+  - ripgrep=13.0.0
+  - ruamel_yaml=0.15.100
+  - setuptools=61.2.0
+  - six=1.16.0
+  - soupsieve=2.3.1
+  - sqlite=3.38.2
+  - tk=8.6.11
+  - toml=0.10.2
+  - tqdm=4.63.0
+  - tzdata=2022a
+  - urllib3=1.26.8
+  - wheel=0.37.1
+  - xz=5.2.5
+  - yaml=0.2.5
+  - zlib=1.2.12
+  - zstd=1.5.2
