--- a/environment.yml
+++ b/environment.yml
@@ -1,91 +1,276 @@
-name: base
+name: rat
 channels:
   - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
+  - affine=2.3.1
+  - aiohttp=3.8.3
+  - aiosignal=1.2.0
+  - async-timeout=4.0.2
+  - attrs=22.1.0
   - beautifulsoup4=4.11.1
+  - blosc=1.21.1
+  - bokeh=2.4.3
+  - boost-cpp=1.78.0
+  - branca=0.5.0
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
   - brotlipy=0.7.0
   - bzip2=1.0.8
   - c-ares=1.18.1
   - ca-certificates=2022.9.24
+  - cachetools=4.2.4
+  - cairo=1.16.0
   - certifi=2022.9.24
-  - cffi=1.15.0
-  - chardet=4.0.0
-  - charset-normalizer=2.0.4
-  - colorama=0.4.4
-  - conda=4.12.0
+  - cffi=1.15.1
+  - cfitsio=4.1.0
+  - cftime=1.6.2
+  - chardet=5.0.0
+  - charset-normalizer=2.1.1
+  - click=8.1.3
+  - click-plugins=1.1.1
+  - cligj=0.7.2
+  - cloudpickle=2.2.0
+  - colorama=0.4.5
+  - conda=22.9.0
   - conda-build=3.22.0
-  - conda-content-trust=0.1.1
-  - conda-package-handling=1.8.1
-  - cryptography=36.0.0
-  - curl=7.84.0
+  - conda-package-handling=1.9.0
+  - contourpy=1.0.5
+  - cryptography=37.0.1
+  - curl=7.85.0
+  - cycler=0.11.0
+  - cytoolz=0.12.0
+  - dask=2022.10.0
+  - dask-core=2022.10.0
+  - distributed=2022.10.0
+  - earthengine-api=0.1.327
+  - esmf=8.2.0
   - expat=2.4.9
-  - filelock=3.6.0
-  - gettext=0.21.0
-  - git=2.34.1
+  - filelock=3.8.0
+  - fiona=1.8.22
+  - folium=0.13.0
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.14.0
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - fonttools=4.37.4
+  - freeglut=3.2.2
+  - freetype=2.12.1
+  - freexl=1.0.6
+  - frozenlist=1.3.1
+  - fsspec=2022.8.2
+  - future=0.18.2
+  - gdal=3.5.2
+  - geopandas=0.11.1
+  - geopandas-base=0.11.1
+  - geos=3.11.0
+  - geotiff=1.7.1
+  - gettext=0.21.1
+  - giflib=5.2.1
   - glob2=0.7
-  - icu=58.2
-  - idna=3.3
-  - jinja2=2.11.3
+  - google-api-core=1.31.5
+  - google-api-python-client=1.12.8
+  - google-auth=1.35.0
+  - google-auth-httplib2=0.1.0
+  - google-cloud-core=2.3.1
+  - google-cloud-sdk=405.0.1
+  - google-cloud-storage=2.5.0
+  - google-crc32c=1.1.2
+  - google-resumable-media=2.4.0
+  - googleapis-common-protos=1.56.4
+  - grpc-cpp=1.48.1
+  - grpcio=1.48.1
+  - gsl=2.7
+  - hdf4=4.2.15
+  - hdf5=1.12.2
+  - hdfeos2=2.20
+  - hdfeos5=5.1.16
+  - heapdict=1.0.1
+  - httplib2=0.20.4
+  - httplib2shim=0.0.3
+  - icu=70.1
+  - idna=3.4
+  - jasper=2.0.33
+  - jinja2=3.1.2
+  - joblib=1.2.0
+  - jpeg=9e
+  - json-c=0.16
+  - kealib=1.4.15
   - keyutils=1.6.1
+  - kiwisolver=1.4.4
   - krb5=1.19.3
-  - ld_impl_linux-64=2.35.1
+  - lcms2=2.12
+  - ld_impl_linux-64=2.39
+  - lerc=4.0.0
+  - libabseil=20220623.0
   - libarchive=3.5.2
-  - libcurl=7.84.0
+  - libblas=3.9.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
+  - libcblas=3.9.0
+  - libcrc32c=1.1.2
+  - libcurl=7.85.0
+  - libdap4=3.20.6
+  - libdeflate=1.14
   - libedit=3.1.20191231
   - libev=4.33
-  - libffi=3.3
-  - libgcc-ng=11.2.0
-  - libgomp=11.2.0
+  - libffi=3.4.2
+  - libgcc-ng=12.2.0
+  - libgdal=3.5.2
+  - libgfortran-ng=12.2.0
+  - libgfortran5=12.2.0
+  - libglib=2.74.0
+  - libglu=9.0.0
+  - libgomp=12.2.0
   - libiconv=1.17
-  - liblief=0.11.5
-  - libnghttp2=1.46.0
-  - libsolv=0.7.20
+  - libkml=1.3.0
+  - liblapack=3.9.0
+  - liblief=0.12.2
+  - libnetcdf=4.8.1
+  - libnghttp2=1.47.0
+  - libnsl=2.0.0
+  - libopenblas=0.3.21
+  - libpng=1.6.38
+  - libpq=14.5
+  - libprotobuf=3.21.7
+  - librttopo=1.1.0
+  - libspatialindex=1.9.3
+  - libspatialite=5.0.1
+  - libsqlite=3.39.4
   - libssh2=1.10.0
-  - libstdcxx-ng=12.1.0
+  - libstdcxx-ng=12.2.0
+  - libtiff=4.4.0
+  - libuuid=2.32.1
+  - libwebp-base=1.2.4
+  - libxcb=1.13
   - libxml2=2.9.14
+  - libzip=1.9.2
+  - libzlib=1.2.13
+  - locket=1.0.0
+  - lz4=4.0.0
   - lz4-c=1.9.3
   - lzo=2.10
-  - mamba=0.15.3
-  - markupsafe=2.0.1
+  - mapclassify=2.4.3
+  - markupsafe=2.1.1
+  - matplotlib-base=3.6.1
+  - msgpack-python=1.0.4
+  - multidict=6.0.2
+  - munch=2.5.0
+  - munkres=1.1.4
+  - ncl=6.6.2
   - ncurses=6.3
-  - openssl=1.1.1q
+  - netcdf-fortran=4.6.0
+  - netcdf4=1.6.1
+  - networkx=2.8.7
+  - nspr=4.32
+  - nss=3.78
+  - numpy=1.23.3
+  - openjpeg=2.5.0
+  - openssl=3.0.5
+  - packaging=21.3
+  - pandas=1.5.0
+  - partd=1.3.0
   - patch=2.7.6
-  - patchelf=0.13
+  - patchelf=0.15.0
+  - pcre=8.45
   - pcre2=10.37
-  - perl=5.26.2
-  - pip=21.2.4
-  - pkginfo=1.8.2
-  - psutil=5.9.0
-  - py-lief=0.11.5
+  - pillow=9.2.0
+  - pip=22.3
+  - pixman=0.40.0
+  - pkginfo=1.8.3
+  - poppler=22.04.0
+  - poppler-data=0.4.11
+  - postgresql=14.5
+  - proj=9.0.1
+  - protobuf=4.21.7
+  - psutil=5.9.2
+  - pthread-stubs=0.4
+  - py-lief=0.12.2
+  - pyasn1=0.4.8
+  - pyasn1-modules=0.2.7
   - pycosat=0.6.3
   - pycparser=2.21
   - pyopenssl=22.0.0
+  - pyparsing=3.0.9
+  - pyproj=3.4.0
   - pysocks=1.7.1
-  - python=3.9.12
-  - python-libarchive-c=2.9
+  - python=3.9.13
+  - python-dateutil=2.8.2
+  - python-libarchive-c=4.0
   - python_abi=3.9
-  - pytz=2022.1
+  - pytz=2022.4
+  - pyu2f=0.1.5
   - pyyaml=6.0
+  - rasterio=1.3.2
+  - re2=2022.06.01
   - readline=8.1.2
-  - reproc=14.2.3
-  - reproc-cpp=14.2.3
-  - requests=2.27.1
+  - requests=2.28.1
   - ripgrep=13.0.0
-  - ruamel_yaml=0.15.100
-  - setuptools=61.2.0
+  - rsa=4.9
+  - rtree=1.0.1
+  - ruamel_yaml=0.15.80
+  - scikit-learn=1.1.2
+  - scipy=1.9.1
+  - setuptools=65.5.0
+  - shapely=1.8.5
+  - simplejson=3.17.6
   - six=1.16.0
-  - soupsieve=2.3.1
-  - sqlite=3.38.2
-  - tk=8.6.11
+  - snappy=1.1.9
+  - snuggs=1.4.7
+  - sortedcontainers=2.4.0
+  - soupsieve=2.3.2.post1
+  - sqlite=3.39.4
+  - tblib=1.7.0
+  - threadpoolctl=3.1.0
+  - tiledb=2.11.3
+  - tk=8.6.12
   - toml=0.10.2
-  - tqdm=4.63.0
-  - tzdata=2022a
-  - urllib3=1.26.8
+  - toolz=0.12.0
+  - tornado=6.1
+  - tqdm=4.64.1
+  - typing-extensions=4.4.0
+  - typing_extensions=4.4.0
+  - tzcode=2022e
+  - tzdata=2022e
+  - udunits2=2.2.28
+  - unicodedata2=14.0.0
+  - uritemplate=3.0.1
+  - urllib3=1.26.11
   - wheel=0.37.1
-  - xz=5.2.5
+  - xarray=2022.10.0
+  - xerces-c=3.2.3
+  - xorg-fixesproto=5.0
+  - xorg-imake=1.0.7
+  - xorg-inputproto=2.3.2
+  - xorg-kbproto=1.0.7
+  - xorg-libice=1.0.10
+  - xorg-libsm=1.2.3
+  - xorg-libx11=1.7.2
+  - xorg-libxau=1.0.9
+  - xorg-libxaw=1.0.14
+  - xorg-libxdmcp=1.1.3
+  - xorg-libxext=1.3.4
+  - xorg-libxfixes=5.0.3
+  - xorg-libxi=1.7.10
+  - xorg-libxmu=1.1.3
+  - xorg-libxpm=3.5.13
+  - xorg-libxrender=0.9.10
+  - xorg-libxt=1.2.1
+  - xorg-makedepend=1.0.6
+  - xorg-renderproto=0.11.1
+  - xorg-xextproto=7.3.0
+  - xorg-xproto=7.0.31
+  - xyzservices=2022.9.0
+  - xz=5.2.6
   - yaml=0.2.5
-  - zlib=1.2.12
+  - yarl=1.7.2
+  - zict=2.2.0
+  - zlib=1.2.13
   - zstd=1.5.2
+prefix: /home/pdas47/conda/envs/rat
