--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -18,6 +18,7 @@ jobs:
       - name: Setup environment with mamba
         uses: conda-incubator/setup-miniconda@v2
         with:
+          mamba-version: "*"
           auto-update-conda: true
           channels: conda-forge,defaults
           environment-file: environment.yml
