--- a/meta.yaml
+++ b/meta.yaml
@@ -1,6 +1,5 @@
 {% set name = "rat" %}
 {% set version = "2.1" %}
-{% set github}
 
 package:
   name: {{ name|lower }}
@@ -9,18 +8,22 @@ package:
 # source:
 #   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/rat-{{ version }}.tar.gz
 #   sha256: b3a5045caa0a80ee4b01765350d049bfd6e3f2d63a02893df76aa4b342f00cf2
+# source:
+#   git_url: https://github.com/UW-SASWE/RAT.git
+#   git_branch: sm-main-pypi
 source:
-  git_url: https://github.com/UW-SASWE/RAT.git
-  git_tag: {{ github.ref }}
-  git_depth: 1
+  path: ./
 
 build:
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
-  number: 0
+  number: 1
+  entry_points:
+    - rat = rat.cli.rat_cli:main
 
 requirements:
   host:
+    - git
     - python >=3.6
     - pip
   run:
