--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -21,18 +21,19 @@ jobs:
           mamba-version: "*"
           auto-update-conda: true
           channels: conda-forge,defaults
-          environment-file: environment.yml
+          environment-file: test_env.yml
       - name: Install test modules
         shell: bash -l {0}
         run: |
           conda info
-          conda install pytest conda-build -y
-      - name: Build RAT
+          conda install conda-build -y
+      - name: Build and install RAT
         shell: bash -l {0}
         run: |
-          conda develop src/
+          conda build .
+          conda install rat --use-local
       - name: Test RAT
         shell: bash -l {0}
         run: |
-          conda activate test
-          pytest
+          rat test 
+          
