setup miniconda modified to activate env

--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -20,8 +20,9 @@ jobs:
         with:
           mamba-version: "*"
           auto-update-conda: true
-          channels: conda-forge,defaults
+          channels: conda-forge, defaults
           environment-file: test_env.yml
+          activate-environment: rat_test_env
       - name: Install test modules
         shell: bash -l {0}
         run: |
