--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -18,16 +18,11 @@ jobs:
       - name: Setup environment with mamba
         uses: conda-incubator/setup-miniconda@v2
         with:
-          mamba-version: "*"
           auto-update-conda: true
-          channels: conda-forge, defaults
+          python: ${{ matrix.python-version }}
+          mamba-version: "*"
           environment-file: test_env.yml
           activate-environment: rat_test_env
-      - name: Install test modules
-        shell: bash -l {0}
-        run: |
-          conda info
-          conda install conda-build -y
       - name: Build and install RAT
         shell: bash -l {0}
         run: |
@@ -36,5 +31,7 @@ jobs:
       - name: Test RAT
         shell: bash -l {0}
         run: |
+          mkdir ~/rat_test
+          rat init -d 
           rat test 
           
