--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -14,22 +14,29 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Setup environment with mamba
+      - name: Setup environment with conda
         uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
-          python: ${{ matrix.python-version }}
+          python-version: ${{ matrix.python-version }}
           environment-file: test_env.yml
           activate-environment: rat_test_env
-      - name: Build and install RAT
+      - name: Test conda
         shell: bash -l {0}
         run: |
-          conda build .
-          conda install -c file://${CONDA_PREFIX}/conda-bld/ rat
-      - name: Test RAT
-        shell: bash -l {0}
-        run: |
-          mkdir ~/rat_test
-          rat init -d 
-          rat test 
+          which conda
+          conda info
+          conda env list
+          conda export --from-history
+      # - name: Build and install RAT
+      #   shell: bash -l {0}
+      #   run: |
+      #     conda build .
+      #     conda install -c file://${CONDA_PREFIX}/conda-bld/ rat
+      # - name: Test RAT
+      #   shell: bash -l {0}
+      #   run: |
+      #     mkdir ~/rat_test
+      #     rat init -d 
+      #     rat test 
           
