update conda env export in GH actions

--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -27,7 +27,7 @@ jobs:
           which conda
           conda info
           conda env list
-          conda export --from-history
+          conda env export --from-history
       # - name: Build and install RAT
       #   shell: bash -l {0}
       #   run: |
