list installed conda packages

--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -44,6 +44,7 @@ jobs:
         run: |
           mamba env update --file environment.yml
           conda develop src/
+          conda list
       - name: Test RAT
         shell: bash -l {0}
         run: |
