--- a/meta.yaml
+++ b/meta.yaml
@@ -7,13 +7,13 @@ package:
 
 source:
   git_url: https://github.com/UW-SASWE/RAT.git
-  git_tag: sm-main
+  git_tag: main
   git_depth: 1
 
 build:
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
-  number: 0
+  number: 4
   entry_points:
     - rat = rat.cli.rat_cli:main
 
