--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -14,6 +14,7 @@ Markdown==3.3.7
 MarkupSafe==2.1.2
 mergedeep==1.3.4
 mkdocs==1.4.2
+mkdocs-markdownextradata-plugin==0.2.5
 mkdocs-material==9.1.4
 mkdocs-material-extensions==1.1.1
 mkdocs-rtd-dropdown==1.0.2
