--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -17,3 +17,13 @@ jobs:
         test_all: false
         convert_win: false
         convert_osx: false
+  publish2:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: publish-to-conda
+        uses: m0nhawk/conda-package-publish-action@master
+        with:
+          subDir: '.'
+          AnacondaUsername: ${{ secrets.ANACONDA_PASSWORD }}
+          AnacondaPassword: ${{ secrets.ANACONDA_USERNAME }}
