--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -1,19 +1,17 @@
-name: Python Package using Conda
+name: publish_conda
 
-on: [push, release]
-
+on:
+  release:
+    types: [push, release]
+    
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: Publish to Conda
-        # uses: Riccorl/conda-publish-action@ee3e070caad49b7368bdf6c9337928dc758635dc
-        uses: Riccorl/conda-publish-action@v1.5
-        with:
-          # Sub-directory with conda recipe
-          subdir: . # optional, default is .
-          # Anaconda access token
-          anacondatoken: ${{ secrets.ANACONDA_TOKEN }}# optional
-          # Platforms to publish [osx/linux/win]
-          platforms: noarch # optional, default is win osx linux
+    - uses: actions/checkout@v2
+    - name: publish-to-conda
+      uses: fcakyon/conda-publish-action@v1.3
+      with:
+        subdir: 'conda'
+        anacondatoken: ${{ secrets.ANACONDA_TOKEN }}
+        platforms: 'win osx linux'
