--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -9,9 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: publish-to-conda
-      uses: fcakyon/conda-publish-action@v1.3
+    - name: Build and publish Conda packages to Anaconda.org (w dependencies on giuliorossetti)
+      uses: GiulioRossetti/conda-package-publish-action@cdlib_a
       with:
-        subdir: 'conda'
-        anacondatoken: ${{ secrets.ANACONDA_TOKEN }}
-        platforms: 'win osx linux'
+        subDir: .
+        AnacondaToken: ${{ SECRETS.ANACONDA_TOKEN }}
+        platforms: linux-64
+        override: true
+        dry_run: false
