--- a/.github/workflows/python-package-conda.yaml
+++ b/.github/workflows/python-package-conda.yaml
@@ -1,9 +1,7 @@
 name: publish_conda
 
-on:
-  release:
-    types: [push, release]
-    
+on: [push, release]
+
 jobs:
   publish:
     runs-on: ubuntu-latest
