--- a/.github/workflows/python-package-pypi.yaml
+++ b/.github/workflows/python-package-pypi.yaml
@@ -28,3 +28,4 @@ jobs:
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         password: ${{ secrets.TESTPYPI_TOKEN }}
+        repository-url: https://test.pypi.org/legacy/
