--- a/.github/workflows/python-package-pypi.yaml
+++ b/.github/workflows/python-package-pypi.yaml
@@ -1,9 +1,15 @@
 name: publish-to-pypi
 
-on: [push, release]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  release:
+    types: [ created ]
 
 jobs:
-  build-n-publish:
+  build:
     name: Build and Publish to PyPI
     runs-on: ubuntu-latest
     steps:
@@ -23,9 +29,21 @@ jobs:
       with:
         name: dist
         path: dist/
-        if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn`
-    - name: Upload distribution to (test) PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        password: ${{ secrets.TESTPYPI_TOKEN }}
-        repository-url: https://test.pypi.org/legacy/
+        retention-days: 5
+        if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn`    
+
+publish:
+  - name: Publish distribution to PyPI
+    needs: [build]
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags')
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: artifact
+          path: dist
+      - name: Upload to artifact PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.PYPI_TOKEN }}
+          skip_existing: true
