--- a/.github/workflows/python-package-pypi.yaml
+++ b/.github/workflows/python-package-pypi.yaml
@@ -33,17 +33,17 @@ jobs:
         if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn`    
 
   publish:
-    - name: Publish distribution to PyPI
-      needs: [build]
-      runs-on: ubuntu-latest
-      if: startsWith(github.ref, 'refs/tags')
-      steps:
-        - uses: actions/download-artifact@v3
-          with:
-            name: artifact
-            path: dist
-        - name: Upload to artifact PyPI
-          uses: pypa/gh-action-pypi-publish@release/v1
-          with:
-            password: ${{ secrets.PYPI_TOKEN }}
-            skip_existing: true
+    name: Publish distribution to PyPI
+    needs: [build]
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags')
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: artifact
+          path: dist
+      - name: Upload to artifact PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.PYPI_TOKEN }}
+          skip_existing: true
